[package]
name = "bug_mve"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vessels = { git = "https://github.com/noocene/vessels", features = ["core"] }
serde = "1.0.103"
